--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,34 @@
 @import "tailwindcss";
 
+/* Garbata Font Family */
+@font-face {
+  font-family: 'Garbata';
+  src: url('/garbata_font/GarbataTrial-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Garbata';
+  src: url('/garbata_font/GarbataTrial-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Garbata';
+  src: url('/garbata_font/GarbataTrial-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Garbata';
+  src: url('/garbata_font/GarbataTrial-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+
 :root {
   /* Light mode colors */
   --background-light: #ffffff;
@@ -84,4 +113,14 @@ button, .btn {
 /* Scroll smooth */
 html {
   scroll-behavior: smooth;
+}
+
+/* Garbata Font Utility Classes */
+.font-garbata {
+  font-family: 'Garbata', sans-serif;
+}
+
+.heading-garbata {
+  font-family: 'Garbata', sans-serif;
+  font-weight: 700;
 }
